--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <script src="node_modules/expect/umd/expect.min.js"></script>
     <script>mocha.setup('bdd');</script>
     <script src="test/index-test.js"></script>
+    <script>init();</script>
   </body>
 </html>
