--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="node_modules/mocha/mocha.css">
   </head>
 
-  <body>
+  <body onkeydown="init()">
 
     <!-- Include the student's JavaScript file. -->
     <script src="konami_code.js"></script>
